<resources>
    <string name="null_value">null</string>
    <string name="app_name" translatable="false">Minesweeper</string>
    <string name="company">Company</string>
    <string name="singleplayer">Custom game</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="internet">Internet</string>
    <string name="rules">Rules</string>
    <string name="rulesOfTheGame">blablablablablablabblablablablablablablablablablablablablablablabl
        ablablablablablablablablablablablablablablablablablablablablablablablablablablablablablablab
        blablablablablablablablablablablablablablablablablablablablablablablablablablablablablablabl
        ablablablabla</string>
    <string name="understand">Got it</string>
    <string name="settingGameParameters">Setting game parameters</string>
    <string name="setFieldSize">Select the size of the field:</string>
    <string name="setMinesCountSize">Select the number of mines:</string>
    <string name="anotherVariant">Another variant</string>
    <string name="startGame">Start game</string>
    <string name="width">Width:</string>
    <string name="height">Height:</string>
    <string name="mines">Mines:</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>

    <string-array name="fieldSizes">
        <item>8*8</item>
        <item>10*10</item>
        <item>14*14</item>
        <item>20*20</item>
        <item>25*25</item>
        <item>Another variant…</item>
    </string-array>
    <string-array name="fieldMinesCount">
        <item>8</item>
        <item>16</item>
        <item>24</item>
        <item>32</item>
        <item>48</item>
        <item>Another variant…</item>
    </string-array>
    <string-array name="minerRole">
        <item>Me</item>
        <item>Opponent</item>
    </string-array>
    <string name="chooseCellSize">Cell size:</string>
    <string-array name="minefieldCellSizes">
        <item>Small</item>
        <item>Middle</item>
        <item>Large</item>
        <item>Huge</item>
    </string-array>

    <!--    dialog      -->
    <string name="dialogGameSettingsSizeTitle">Choose the field size</string>
    <string name="dialogGameSettingsSizeMessage">Specify your values for the width (x) and height (y) of the field:</string>
    <string name="inputWidthValue">Input the width of the field:</string>
    <string name="inputHeightValue">Input the height of the field:</string>
    <string name="confirm">Confirm</string>
    <string name="parametersDoNotMeetRequirements">Parameters do not meet requirements</string>

    <!--    dialog mines count     -->
    <string name="dialogGameSettingsMinesCountTitle">Choose the mines count</string>
    <string name="dialogGameSettingsMinesCountMessage">Specify how many mines could be placed on the field:</string>
    <string name="inputMinesCountValue">Input the number of mines:</string>

    <string name="enterAllParamsBeforeStart">You have tp enter all parameters before starting the game</string>
    <string name="firstClickCanBeOnAMine">First click can be on a mine:</string>

    <!--game modes-->
    <string name="gameModeBluetooth">Bluetooth game</string>
    <string name="gameModeCasual">Casual game</string>
    <string name="gameModeCompany">Company game</string>
    <string name="none">None</string>

    <!--Result game activity-->
    <string name="win">Win!</string>
    <string name="lose">Defeat…</string>


    <string name="game_mode">Game mode:</string>
    <string name="fieldSizeOptions">Field settings</string>
    <string name="heightAndWidth">Height and width</string>
    <string name="minesCount">Mines count</string>
    <string name="timeLimit">Time limit</string>
    <string name="leaveAfterMatch">Leave after match:</string>
    <string name="useTheSameField">Use the same minefield:</string>
    <string name="createGame">Create game</string>
    <string name="minefieldSize">Minefield size</string>
    <string name="nickname">Nickname:</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="completion_time">Completion time</string>
    <string name="field_size">Field size:</string>

    <string name="mines_count_cant_be_greater_that_square">The number of mines cannot exceed the area of the field</string>

    <string name="opponentExploded">Opponent exploded, u won</string>
    <string name="opponentWon">Opponent won earlier, u lost</string>
    <string name="connectedDevice">Connected device name: </string>
    <string name="diveConnectionWasLost">Device connection was lost</string>
    <string name="unableToConnectDevice">Unable to connect device</string>
    <string name="btNotAvailable">Error turning on Bluetooth</string>

    //DeviceListActivity
    <string name="pairedDevices">Paired devices</string>
    <string name="scan">Scan</string>
    <string name="otherDevices">Other devices</string>
    <string name="bluetoothTurnedOn">Bluetooth turned off</string>
    <string name="bluetoothTurnedOff">Bluetooth turned on</string>
    <string name="notPaired">Not paired</string>
    <string name="scanning">Scanning</string>
    <string name="selectDevice">Select device</string>
    <string name="noneFound">None devices was found</string>

    //helper dialog
    <string name="help_dialog_title">Help</string>
    <string name="help_game_rules">game rules</string>
    <string name="help_with_gameplay">gameplay</string>
    <string name="help_game_modes">game modes</string>
    <string name="help_bluetooth_game">bluetooh game</string>
    <string name="description_game_rules">
Opening a cell - it may contain: \n 1) mine 2) number 3) nothing \n
         1.If you open a cell with a mine, you lose; \n
         2. The number in the cell shows how many mines are hidden in the immediately adjacent cells; \n
         3.If there is nothing in an open cell, this is equivalent to zero minutes around this cell; \n \n

         In order to complete the game you need: \n
         1. Open all cells, except those in which mines are located; \n
         2.All cells with mines - mark with a flag. \n
    </string>
    <string name="description_game_process">
On the playing field in the lower right corner there is an icon of the selected action \n
        If there is a "Flag" there: \n
        when you touch a cell on the field - this cell is marked with a flag. \n
        If the cell has already been marked with a flag before, the flag is removed. \n \n

        If the Shovel icon is selected: \n
        when you touch a cell on the field, it opens it. \n
        If the cell is marked with a flag, or is open, it has no effect. \n \n

        ----------- \n

        There is a slider at the bottom of the screen, the value of which determines the size of the cells on the margin. \n \n

        ----------- \n

        If not all cells fit on the screen, the minefield can be scrolled. For this
        you need to slide the pressed finger along the field horizontally or vertically, depending on
        from the desired direction. \n \n

        ----------- \n

        There is a timer at the top of the screen. If the time expires, the player will
        automatically assigned defeat \n
        If there is no time limit, it acts as a stopwatch. \n
    </string>
    <string name="description_game_modes">
At the moment there are 3 game modes in the game:\n
         1. Campaign \n
         2. Own game \n
         3. Bluetooth play \n \n

         In the campaign, the player is asked to complete levels with pre-prepared settings. \n
         In your game, you need to set the settings for the game yourself before playing. \n
         2 people participate in the bluetooth game. One of the players must create
         the game, and the second is to connect to it. Whoever solves the card faster is the winner. \n
    </string>
    <string name="description_game_bluetooth">
Several things are required to play via bluetooth: \n
        1. Bluetooth enabled; \n
        2. Configured pairing via bluetooth with the second player; \n \n

        1. One player must act as a "Server" and create a game. \n
        2. The second player, the "Client", after the first creation of the game players, must
        go to the "Client" section of the Bluetooth game mode. There will be a list of all
        paired devices. Among them, you must select the first Name of the first player. \n \n
        The game continues until at least one of the players loses,
        or until at least one of the players wins. \n
    </string>


    //Themes
    <string-array name="theme_array">
        <item>None</item>
        <item>Old</item>
        <item>Material</item>
        <item>Colorized</item>
    </string-array>


    //ad dialog
    <string name="adDialog">Advertisement</string>
    <string name="wouldLikeToContinue">Sorry, you lost. You can watch the promotional video
        to undo the previous move. Would you like to do it?</string>
    <string name="watch">Watch</string>


    //WEB
    PART---------------------------------------------------------------------------------------------------------------------------------------------------------------
    <string name="haveToAuth">You have to authorize first!</string>
    <string name="waiting_room">Waiting room</string>
    <string name="room_description">Room description</string>
    <string name="web_game">Web game</string>
    <string name="bluetooth_game">Bluetooth game</string>
    <string name="back">Back</string>
    <string name="server">Server</string>
    <string name="client">Client</string>
    <string name="log_in">log in</string>
    <string name="log_out">log out</string>
    <string name="registration">registration</string>
    <string name="without">without</string>
    <string name="old">old</string>
    <string name="material">material</string>
    <string name="colorized">colorized</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="players">Players:</string>
    <string name="room">Room</string>
    <string name="time">Time:</string>
    <string name="field">Field:</string>
    <string name="refresh">refresh</string>
    <string name="register">Register</string>
    <string name="already_have_account_log_in">Already have account? Log in</string>
</resources>