<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorMainBackground">

    <TextView
        style="?main_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialogGameSettingsSizeTitle" />

    <TextView
        style="?casual_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingTop="20dp"
        android:gravity="center"

        android:text="@string/dialogGameSettingsSizeMessage" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/x_y_example_dialog" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingHorizontal="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputWidthValue"
            style="?casual_description"            />

        <EditText
            android:id="@+id/edittext_settings_dialog_width"
            android:inputType="numberSigned"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            style="?casual_description"
            android:layout_marginStart="10dp"            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputHeightValue"
            style="?casual_description"
            />

        <EditText
            android:id="@+id/edittext_settings_dialog_height"
            android:inputType="numberSigned"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            style="?casual_description"
            android:layout_marginStart="10dp"            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <Button
            android:id="@+id/button_setting_size_fragment_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:paddingVertical="13dp"
            style="?main_button"/>

        <Button
            android:id="@+id/button_setting_size_fragment_accept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:paddingVertical="13dp"
            style="?main_button"/>

    </LinearLayout>


</LinearLayout>