<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="?attr/background_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.activity.MainActivity">

    <LinearLayout
        style="?attr/background_image_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    style="?attr/game_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/app_name" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/button_main_profile"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:contentDescription="PROFILE"
                        style="?attr/main_button"
                        android:src="@drawable/ic_baseline_person_24" />

                    <ImageButton
                        android:id="@+id/button_main_themes"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:contentDescription="THEMES"
                        style="?attr/main_button"
                        android:src="@drawable/ic_baseline_format_paint_24" />

                </LinearLayout>

                <Button
                    android:id="@+id/button_main_company"
                    style="?attr/main_button"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:text="@string/company" />

                <Button
                    android:id="@+id/button_main_custom_game"
                    style="?attr/main_button"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:text="@string/singleplayer" />

                <Button
                    android:id="@+id/button_main_bluetooth_game"
                    style="?attr/main_button"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:text="@string/bluetooth_game" />

                <Button
                    android:id="@+id/button_main_bluetooth_game_back"
                    style="?attr/main_button"
                    android:visibility="gone"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:text="@string/back" />

                <Button
                    android:id="@+id/button_main_bluetooth_game_client"
                    style="?attr/main_button"
                    android:layout_width="210dp"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:text="@string/client" />

                <Button
                    android:id="@+id/button_main_bluetooth_game_server"
                    style="?attr/main_button"
                    android:layout_width="210dp"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:text="@string/server" />

                <Button
                    android:id="@+id/button_main_web_game"
                    style="?attr/main_button"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:text="@string/web_game" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>


    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"/>
</LinearLayout>