<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/game_mode"
            android:gravity="end"/>

        <TextView
            android:id="@+id/tv_game_settings_game_mode"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="Casual"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|bottom"
        android:text="@string/fieldSizeOptions"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/heightAndWidth"/>

        <Spinner
            android:id="@+id/spin_game_settings_field_size"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/minesCount"/>

        <Spinner
            android:id="@+id/spin_game_settings_mines_count"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/timeLimit"/>

        <NumberPicker
            android:id="@+id/np_game_settings_minutes"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80dp" />

        <NumberPicker
            android:id="@+id/np_game_settings_seconds"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80dp" />

<!--        <TextView-->
<!--            android:id="@+id/tv_game_settings_game_time_selected"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_height="match_parent" />-->

<!--        <Button-->
<!--            android:id="@+id/btn_game_settings_game_time"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_height="match_parent"-->
<!--            android:text="Выбрать"/>-->
    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:id="@+id/ll_game_settings_miner"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->
<!--        <TextView-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_height="match_parent"-->
<!--            android:text="Минёр:"/>-->

<!--        <Spinner-->
<!--            android:id="@+id/spin_game_settings_miner"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_height="match_parent" />-->

<!--    </LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/firstClickCanBeOnAMine"/>

        <CheckBox
            android:id="@+id/cb_game_settings_first_click_mine"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:checked="true"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_game_settings_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/leaveAfterMatch"/>

        <CheckBox
            android:id="@+id/cb_game_settings_exit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_game_settings_use_same_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/useTheSameField"/>

        <CheckBox
            android:id="@+id/cb_game_settings_use_same_field"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_game_settings_create_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createGame"/>

</LinearLayout>