<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground"
    android:orientation="vertical">


    <TextView
        style="@style/StyleMenuButtonFormat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/help_dialog_title"
        android:textSize="34sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_dialog_help_description"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:translationX="-550dp">

                <me.biubiubiu.justifytext.library.JustifyTextView
                    android:id="@+id/tv_dialog_help_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_dialog_help_buttons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:translationX="0dp"
                android:scaleX="1">

                <Button
                    android:id="@+id/btn_dialog_help_game_rules"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/StyleMenuButtonFormat"
                    android:layout_margin="10dp"
                    android:textSize="26sp"
                    android:text="@string/help_game_rules" />

                <Button
                    android:id="@+id/btn_dialog_help_gameplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/StyleMenuButtonFormat"
                    android:layout_margin="10dp"
                    android:textSize="26sp"
                    android:text="@string/help_with_gameplay" />

                <Button
                    android:id="@+id/btn_dialog_help_game_modes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/StyleMenuButtonFormat"
                    android:layout_margin="10dp"
                    android:textSize="26sp"
                    android:text="@string/help_game_modes" />

                <Button
                    android:id="@+id/btn_dialog_help_bluetooth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/StyleMenuButtonFormat"
                    android:layout_margin="10dp"
                    android:textSize="26sp"
                    android:text="@string/help_bluetooth_game" />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/btn_dialog_help_submit"
        style="@style/StyleMenuButtonFormat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="14dp"
        android:text="@string/confirm"
        android:textSize="23sp" />

</LinearLayout>